<resources>
    <string name="app_name">MessagingApp</string>
    <string name="sign_up">SIGN UP</string>
    <string name="unregistered">Not registered?</string>
    <string name="what_i_do">What I do</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">under construction…</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">Update</string>
    <string name="username_placeholder">username placeholder</string>
    <string name="message_placeholder">message placeholder</string>
    <string name="profession_placeholder">profession placeholder</string>
    <string name="time_placeholder">time placeholder</string>
    <string name="search">search</string>
    <string name="add_demo_conversation">add demo conversation</string>
    <string name="time_example">12:51</string>
</resources>