<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logInProfilePicture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar_image_placeholder"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:gravity="center"
        android:hint="@string/enter_your_nickname"
        android:background="@drawable/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInProfilePicture"
        android:id="@+id/logInNickname"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:background="@drawable/white_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInNickname"
        android:id="@+id/logInPassword"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        />

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up"

        />

    <TextView
        android:id="@+id/notRegisteredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unregistered"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginSignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/what_i_do"
        android:gravity="center"
        android:background="@drawable/white_background"
        android:id="@+id/whatIdoTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword"
        android:layout_marginTop="40dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatIdoTextField"
        android:id="@+id/registerSignUpButton"
        android:layout_marginTop="40dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>